update the get-pip / ez_setup uris
Summary:
When I built memsql-loader these wgets errored. These new uris were
listed as pypa as the new "official" place to get the scripts.

Test Plan: make build didn't work, now it does

Reviewers: carl, tyler, john, hurshal

Reviewed By: hurshal

Subscribers: engineering-list

Differential Revision: https://grizzly.memsql.com/D16033

--- a/distribution/Dockerfile
+++ b/distribution/Dockerfile
@@ -41,11 +41,11 @@ RUN wget -q --no-check-certificate -O /tmp/python-2.7.8.tar.gz http://www.python
     make -j 12 && make altinstall
 
 # install latest setuptools
-RUN wget -q --no-check-certificate -O /tmp/ez_setup.py https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py && \
+RUN wget -q --no-check-certificate -O /tmp/ez_setup.py https://bootstrap.pypa.io/ez_setup.py && \
     cd /tmp && /usr/local/bin/python2.7 /tmp/ez_setup.py --insecure
 
 # install latest pip
-RUN wget -q --no-check-certificate -O /tmp/get-pip.py https://raw.github.com/pypa/pip/master/contrib/get-pip.py && \
+RUN wget -q --no-check-certificate -O /tmp/get-pip.py https://bootstrap.pypa.io/get-pip.py && \
     /usr/local/bin/python2.7 /tmp/get-pip.py
 
 # install pip 1.5.6
